--- a/src/njk/pages/test.njk
+++ b/src/njk/pages/test.njk
@@ -1,5 +1,5 @@
 {% extends "layout.njk" %}
-{% set pageTitle = 'Interior' %}
+{% set pageTitle = 'test' %}
 {% set pageType = 'Layout' %}
 {% block head %}
 <title>{{ pageTitle }} | {{ siteName }}</title>
@@ -8,9 +8,7 @@
 {% block content %}
 <main id="main">
 
-    <section aria-labelledby="page-title">
-        {% include "partials/hero/hero-interior.njk" %}
-    </section>
+
 
     <section aria-label="Photo overlap, Stats 2x2 grid, Stats row">
         <div class="wrapper wrapper-overlap">
@@ -70,7 +68,7 @@
     </section>
 
     <section class="gradient-hz-blue pinch pinch-blue" aria-label="Featured Tabs">
-        <div class="bg-effects">
+        <div class="">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-md-10 py-5">
