--- a/src/njk/templates/layout.njk
+++ b/src/njk/templates/layout.njk
@@ -1,5 +1,5 @@
-{% set siteName = "New Website" %}
-{% set includePath = "includes/" %}
+{% set siteName = "Emory Continuing Education" %}
+{% set includePath = "includes/template-ece/" %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -10,11 +10,11 @@
 </head>
 
 <body>
-    <a href="#main" class="sr-only sr-only-focusable">Skip to main content</a>
+    <a href="#main-content" class="sr-only sr-only-focusable">Skip to main content</a>
 
     {% include "partials/global/header.njk" %}
 
-    <a id="main" class="sr-only sr-only-focusable">Main content</a>
+    <a id="main-content" class="sr-only sr-only-focusable">Main content</a>
 
     {% block content %}{% endblock %}
 
