--- a/src/njk/templates/partials/wysiwyg/wysiwyg.njk
+++ b/src/njk/templates/partials/wysiwyg/wysiwyg.njk
@@ -4,7 +4,7 @@
     <h3>Heading 3</h3>
     <p>Sometimes WYSIWYG styles have a <em>more or less distinct look and feel</em> than <a href="#">generic text across the website</a>, and this can be used to reflect those styles.</p>
     <h4>Heading 4</h4>
-    <p>WYSIWYG content should never contain <code>&lt;h1&gt;</code>.</p>
+    <p>User input WYSIWYG content should never contain <code>&lt;h1&gt;</code>.</p>
     <hr>
     <div class="row">
         <div class="col-md-6">
@@ -23,4 +23,4 @@
     <blockquote>
         <p>{% include "partials/wysiwyg/sentence-md.njk" %} - John Smith</p>
     </blockquote>
-</div><!-- .wysiwyg -->
+</div><!-- /.wysiwyg -->
