--- a/src/njk/templates/partials/global/header.njk
+++ b/src/njk/templates/partials/global/header.njk
@@ -1,3 +1,3 @@
-<header id="site-header" class="fixed-top">
+<header id="site-header" class="header fixed-top">
     {%include "partials/global/navbar.njk" %}
 </header>
