Template files copy and overrides

--- a/src/njk/templates/layout.njk
+++ b/src/njk/templates/layout.njk
@@ -1,5 +1,6 @@
 {% set siteName = "Emory Continuing Education" %}
-{% set includePath = "includes/template-ece/" %}
+{% set includePath = "includes/" %}
+{% set templateIncludePath = "includes/template-ece/" %}
 <!DOCTYPE html>
 <html lang="en">
 
