--- a/src/scss/site.scss
+++ b/src/scss/site.scss
@@ -9,6 +9,11 @@
 
 /* Template overrides */
 
+// Adjust wrapper edges to align neatly with grid on xl screens
+.wrapper {
+	max-width: 1295px;
+}
+
 // Add letter-spacing to all instances of Barlow Condensed that don't have it already
 .subheading, .heading-hr, .wysiwyg h4, .wysiwyg h5, .wysiwyg h6, .btn, .card-highlight .card-highlight__title, .card-icons .card-icons__text, .card-links .card-links__title, #site-nav .navbar-nav .nav-item, .search-filters .search-filters__legend, .stats.stats-row .stats__text, .stats.stats-col .stats__bold {
 	letter-spacing: .06em;
@@ -66,12 +71,14 @@ small, .small {
 	.card-links__title {
 		margin-bottom: 1rem;
 	}
-	// Increase link listing font size and adjust item spacing
-	.card-links__link .card-links__list {
-		font-size: 1rem;
-		line-height: 1.5;
-		li {
-			margin-bottom: .5rem;
+	.card-links__link {
+		.card-links__list {
+			// Increase list font size and adjust item spacing
+			font-size: 1rem;
+			line-height: 1.5;
+			li {
+				margin-bottom: .5rem;
+			}
 		}
 	}
 }
