Removed button group bottom padding

--- a/src/njk/templates/partials/component/card-links.njk
+++ b/src/njk/templates/partials/component/card-links.njk
@@ -28,7 +28,7 @@
     </div>
     <!-- /.row -->
 
-    <div class="btn-group btn-group-lg d-flex justify-content-center pb-5" role="group" aria-label="Basic example">
+    <div class="btn-group btn-group-lg d-flex justify-content-center" role="group" aria-label="Basic example">
         <a href="#" class="btn btn-secondary rounded mx-1">View all offerings</a>
         <a href="search.html" class="btn btn-outline-light border-0 rounded mx-1">
             <img src="{{ includePath }}images/icons/magnifier-w.svg" class="icon-sm" alt=""/> Search Courses
